# agent-lab

./: .cursorignore  .dockerignore  .env.example  .env.pytest  .gitignore  .gitmodules  .rgignore  BILLING_README.md  CHECK_PLUGIN_SYSTEM.md  CONFIG_README.md  CSS_REFACTORING_ANALYSIS.md  CSS_REFACTORING_REPORT.md  Dockerfile  Dockerfile.base  Dockerfile.base.gpu  Dockerfile.gpu  Dockerfile.test  Dockerfile.test.base  FRONTEND_MODERNIZATION_PLAN.md  IMPLEMENTATION_PLAN_MODULES_RU.md  LICENSE  MCP_FINAL_SUMMARY.md  MCP_INTEGRATION_STATUS.md  Makefile  NAVIGATION_TYPES.md  PLUGIN_ARCHITECTURE.md  PLUGIN_PLACEMENT.md  README.md  SUBMENU_GUIDE.md  TARGET_ARCHITECTURE_RU (2).md  TARGET_ARCHITECTURE_RU.md  THIRD_PARTY_NOTICES.md  WHATS_NEW.md  amocrm_export_data.py  analyze_imports.py  arch_kkr.md  checkpoint_inspector.py  checkpoint_inspector_usage.md  conf.example  conf.json  (+42 more)
.cursor/plans/: architectural_audit_report.plan.md  flow_premature_completion_strict.plan.md  flows_execution_limits.plan.md  flows_node_modals_fix.plan.md  office-documents-oss-service.plan.md  operator-hitl-queues.plan.md  platform-sidebar-centralization.plan.md  pwa-stores-mobile.plan.md
.cursor/rules/: ANALYSIS_REPORT.md  README.md  Untitled  agent_architecture.mdc  agents.mdc  agents_logic.mdc  ai_models.mdc  architecture.mdc  billing.mdc  calls.mdc  code_quality.mdc  comments.mdc  configuration.mdc  container.mdc  container_di.mdc  context_chat.mdc  crm.mdc  crud_api.mdc  data-types.mdc  database.mdc  database_architecture.mdc  documentation_as_is.mdc  domain_naming.mdc  domain_utils.mdc  durable_execution.mdc  eval.mdc  exception.mdc  execution_state.mdc  file_types.mdc  files.mdc  flows.mdc  flows_chat.mdc  flows_logic.mdc  frontend.mdc  frontend_plugins.mdc  handoff.mdc  http_client.mdc  humanitec_agent.mdc  infrastructure.mdc  integrations.mdc  (+38 more)
.github/workflows/: README.md  build-base-gpu.yml  build-base.yml  build-test-base.yml  build-test-images.yml  deploy.yml  humanitec-agent-build-pr.yml  humanitec-agent-build.yml  humanitec-agent-desktop-e2e.yml  humanitec-agent-macos-notarize.yml  mobile-android-build.yml  mobile-pwa-lighthouse.yml
.windsurf/plans/: fix-core-companies-router-fec8ab.md
.windsurf/rules/: README.md  architecture.md  billing.md  calls.md  comments.md  configuration.md  container.md  context_chat.md  crm.md  data-types.md  database.md  documentation_as_is.md  domain_naming.md  eval.md  exception.md  (+32 more)
.zed/: launch.json
app/: main.py
apps/: __init__.py  app_runtime_targets.py  worker.py
backend/: .env  Dockerfile  cleanup_non_company_data.py  debug_task.py  run.py  run_worker.py
ci_scripts/: ci_post_clone.sh
core/: __init__.py  ai_provider_catalog.py  app_state.py  fields.py  inline_python_eval_policy.py  internal_context_headers.py  llm_model_routing.py  pagination.py  rag_indexing_schema.py  reflection.py  types.py  urn.py
coverage/: lcov.info
datta-able-vanilla-js 2/: documentation.html  gulpfile.js  package-lock.json  package.json  script.js  support.html
deploy/: GITHUB_SECRETS_LITSERVE.md  LITSERVE_GPU_HOST.md  README.md  ROLLBACK_LITSERVE.md  STATIC_FILES_FIX.md  bootstrap-litserve-node-gpu.sh  bootstrap-litserve-node.sh  build-and-push.sh  cluster-setup.md  conf.json  conf.local.ingress-litserve-remote.example.json  conf.prod.json  deploy.sh  deploy_readme.md  docker-compose.prod.yml  firewall-main-platform-for-litserve-node.sh  github-actions-secrets-checklist.md  ingress.sh  k8.sh  litserve-remote.env.example  nginx.conf  prepare-static.sh  setup.sh  verify-litserve-gpu-node.sh  wildcard-tls.sh
docs/: CHANGELOG_DB_REFACTORING.md  README.md  agent_config.md  agents.md  api.md  api_links.md  api_reference.md  architecture.md  billing.md  browser-mcp.md  clients.md  configuration.md  database_architecture_analysis.md  database_refactoring_final.md  delayed_tasks.md  deployment.md  frontend.md  index.en.md  index.md  internationalization.md  llm.md  makefile.md  mcp-servers-examples.md  mcp.md  mcp_integration.md  mcp_tool_schema.md  mcp_tool_schema_debugging.md  memory_policies_architecture.md  meta.json  notifications.md  payments.md  platform_architecture.md  proposal_sub_agent_memory_policies_v2.md  quickstart.md  sgr_integration.md  state_and_variables.md  sub_agent_memory_policies.md  variables.md  yoomoney_oauth.md
docs-starlight/: package.json  tsconfig.json
logs/: agents.log.1  agents.log.2  agents.log.3  agents.log.4  agents.log.5  frontend.log.1
migrations/: alembic.ini  env.py  services.json
mk/: agent.mk  app.mk  db.mk  lint.mk  migrate.mk  sgr.mk  test.mk  worker.mk
mobile/: .gitignore  README.md  capacitor.config.json  lighthouserc.cjs  package-lock.json  package.json
pdf_extracted/: full_text.txt
scripts/: __init__.py  _check_print_calls.py  _clean_flows_i18n.py  agent_build.py  agent_release_tag_smoke.sh  audit_wider_repo_strictness.py  benchmark_litserve_tts_latency.py  bootstrap_runtimes.py  bootstrap_search_crawl_schedules.py  build_codemirror_bundle.mjs  build_i18n.py  check_agent_e2e_coverage.py  check_agent_goose_tool_contract.py  check_agent_test_no_monkeypatch.py  check_command_rest_mirror.py  check_company_ai_canon.py  check_core_frontend_canon.py  check_docs_locale_parity.py  check_embed_esm_closure.py  check_field_canon.sh  check_files_canon.py  check_files_ui_canon.sh  check_ft_wheels.sh  check_gpu_dockerfile_llm_model.sh  check_i18n.sh  check_i18n_keys.py  check_logging_canon.sh  check_mcp_branding_bundle.py  check_no_uvicorn.sh  check_rag_post_retrieval_rerank_single.py  check_scenario_docs_quality.py  check_speakable_parity.py  check_strict_agent_architecture.py  check_tts_pipeline_single_apply.py  check_ui_canon.sh  check_ui_factories.py  check_variables_legacy.sh  check_voice_resolver_usage.py  clean_i18n_unused.py  db_migrate.py  (+46 more)
sgr-service/: Dockerfile  entrypoint.sh
stress/: README.md  run.sh
tests/: conftest.py
typings/: FlagEmbedding.pyi  ahocorasick.pyi  aioboto3.pyi  docxtpl.pyi  huggingface_hub.pyi  num2words.pyi  pywebpush.pyi  sentence_transformers.pyi  silero.pyi  silero_vad.pyi  yt_dlp.pyi
(+6648 files in other folders)
