[project]
name = "agent-lab"
version = "0.1.0"
description = "Agent Platform - платформа агентских систем"
license = "Elastic-2.0"
# Python 3.14 — single target. Локально на macOS: 3.14 GIL build (cp314). В Docker:
# 3.14t free-threaded (cp314t), закрепляется в Dockerfile + Helm PYTHON_GIL=0.
# requires-python оставляем диапазоном, чтобы оба ABI считались валидными.
requires-python = ">=3.14,<3.15"
dependencies = [
    "google-auth>=2.43.0",
    "greenlet",
    "num2words>=0.5.14",
    "pyahocorasick>=2.3.1",
    "playwright-stealth>=2.0.3",
    "pywebpush>=2.1.2",
    "reportlab>=4.4.7",
    "xlrd>=2.0.1",
]
[tool.uv]
default-groups = [
    "core",
    "agents",
    "worker-base",
    "rag-worker",
    "crm",
    "rag",
    "sync",
    "dev",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "core"]

[tool.hatch.build.targets.wheel.force-include]
"core/files/writer/fonts/NotoSans-Regular.ttf" = "core/files/writer/fonts/NotoSans-Regular.ttf"
"core/files/writer/fonts/OFL.txt" = "core/files/writer/fonts/OFL.txt"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "unit: unit tests",
    "integration: integration tests that require external services",
    "e2e: end-to-end tests",
    "slow: slow tests that take longer to run",
    "real_taskiq: тесты с реальным TaskIQ worker",
    "timeout: тесты с таймаутом выполнения",
    "schemathesis: автоматические тесты API на основе OpenAPI схемы",
    "agent_e2e: HumanitecAgent protocol E2E через HTTP/WS",
    "agent_desktop_e2e: HumanitecAgent desktop install/pairing E2E",
]

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [
    "apps/agent/desktop/vendor",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.basedpyright]
exclude = [
    "apps/agent/desktop/vendor",
]

[dependency-groups]
core = [
    "fastapi>=0.118.0",
    "pydantic>=2.11.0",
    "a2a-sdk>=0.3.7,<1",
    "pydantic-settings>=2.0.0",
    "granian>=2.7.4",
    "asyncpg>=0.31.0",
    "redis>=7.0.0",
    "httpx[http2]>=0.28.0",
    "httpx-sse>=0.4.0",
    "sqlalchemy[asyncpg]>=2.0.23",
    "alembic>=1.13.0",
    "aioboto3>=13.0.0",
    "boto3>=1.28.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    # chonkie 1.6+ ввёл core dep `tokie` (Rust/PyO3), у которого нет cp314 wheel
    # под macOS arm64 (sdist падает на cargo). 1.5.x — pure Python с теми же
    # tiktoken/tokenizers backend'ами, что мы используем в core/rag/chunking/split.py.
    "chonkie>=1.5.6,<1.6",
    "authlib>=1.3.0",
    "itsdangerous>=2.2.0",
    "jsonschema>=4.25.0",
    "jinja2>=3.1.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "python-multipart>=0.0.6",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.0",
    "pywebpush>=2.1.2",
    "opentelemetry-instrumentation-asyncpg>=0.59b0",
    "pgvector>=0.3.6",
    "croniter>=6.2.2",
    "markdown>=3.10",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
    "pillow>=12.0.0",
    "docxtpl>=0.20.2",
    "reportlab>=4.4.7",
    "unstructured[xlsx]>=0.16.0",
    "python-pptx>=1.0.2",
    "striprtf>=0.0.27",
    "odfpy>=1.4.1",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "extract-msg>=0.50.0",
    "yt-dlp>=2024.0.0",
    "structlog>=25.5.0",
    "trafilatura>=2.0.0",
]

agents = [
    "pymupdf>=1.27.2",
    "simpleeval>=1.0.3",
    "openai>=2.2.0",
    "Pillow>=10.0.0",
    "sse-starlette>=2.0.0",
    "pydub>=0.25.1",
    "taskiq>=0.11.0",
    "taskiq-redis>=1.0.0",
]

worker-base = [
    "taskiq>=0.11.0",
    "taskiq-redis>=1.0.0",
    "openai>=2.2.0",
]

rag-worker = [
    "tiktoken>=0.9.0",
    "beautifulsoup4>=4.12.0",
    "tree-sitter-language-pack>=1.5.0",
]

crm = [
    "tiktoken>=0.9.0",
]

rag = [
    "flagembedding>=1.3.5",
    "litserve>=0.2.17",
    "sentence-transformers>=5.4.0",
    "tiktoken>=0.9.0",
    "transformers<5",
    "silero>=0.5.5",
    "silero-vad>=5.1.2",
    "soundfile>=0.13.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "pyannote-audio>=4.0.4",
]

llm-model = [
    "torch>=2.6.0",
    "transformers<5",
    "accelerate>=1.4.0",
    "bitsandbytes>=0.45.0",
]

sync = [
    "livekit-api>=1.1.0",
    "websockets>=16.0",
]

browser = [
    "playwright>=1.58.0",
]

docs = [
    "zensical>=0.0.32",
]

dev = [
    "skia-python>=144.0",
    "pillow>=12.0.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-rerunfailures>=15.0",
    "filelock>=3.0.0",
    "ruff>=0.14.0",
    "websockets>=14.0",
    "schemathesis>=3.19.0",
    "coverage>=7.4.0",
    "pytest-timeout>=2.4.0",
    "playwright>=1.58.0",
    "xlwt>=1.3.0",
    "basedpyright>=1.39.4",
]

[tool.coverage.run]
source = ["apps", "core"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
show_missing = true
precision = 2
skip_covered = false
skip_empty = true
